--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <div class="header-video">
         <video autoplay muted loop>
-          <!-- <source src="img/video.webm" type="video/webm" codecs="vp8, vorbis"> -->
+          <source src="img/video.webm" type="video/webm" codecs="vp8, vorbis">
         </video>
       </div>
         <div class="container">
@@ -29,19 +29,19 @@
                     </div>
                 </div>
             </div>
-            <div class="slides slides-custom swiper-container">
+            <div class="slides slides-custom swiper-container ">
               <div class="swiper-wrapper">
-                <div class="slide first-slide swiper-slide">
+                <div class="first-slide swiper-slide slide">
                   <h1>Станьте пользователем сегодня</h1>
                   <p>экономьте время и деньги в одном on-line сервисе<span>до<b>30%</b></span></p>
                 </div>
                 <div class="slide second-slide swiper-slide">
                   <h1>профессиональный подход с&nbsp;правом выбора</h1>
-                  <p>Как экономить<span>не на качестве выполнения работ</span></p>
+                  <p><span>Как экономить</span> <br>не на качестве выполнения работ</p>
                 </div>
                 <div class="slide third-slide swiper-slide">
-                  <h1>Заказ спецтехники и перевозка грузов</h1>
-                  <p>On-line сервис с живой поддержкой клиентов</p>
+                  <h1>Заказ спецтехники<br> и перевозка грузов</h1>
+                  <p><span>On-line сервис</span><br> с живой поддержкой клиентов</p>
                 </div>
               </div>
               <div class="swiper-pagination"></div>
